--- a/settings.gradle
+++ b/settings.gradle
@@ -1,18 +1,18 @@
 pluginManagement {
     repositories {
-        gradlePluginPortal()
-        mavenCentral()
+        maven { url "https://maven.aliyun.com/repository/central" }
         maven { url "https://maven.aliyun.com/repository/google" }
         maven { url "https://maven.aliyun.com/repository/jcenter" }
         maven { url "https://maven.aliyun.com/repository/public" }
         maven { url "https://www.jitpack.io" }
         maven { url "https://maven.aliyun.com/repository/gradle-plugin" }
+        gradlePluginPortal()
     }
 }
 dependencyResolutionManagement {
     repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
     repositories {
-        mavenCentral()
+        maven { url "https://maven.aliyun.com/repository/central" }
         maven { url "https://maven.aliyun.com/repository/google" }
         maven { url "https://maven.aliyun.com/repository/jcenter" }
         maven { url "https://maven.aliyun.com/repository/public" }
